@@ -402,6 +402,16 @@
     <string name="elem_D_FF_AS_pin_Set">asynchronous set. If set to one, all stored bits are set to one.</string>
     <string name="elem_D_FF_AS_pin_Clr">asynchronous clear. If set to one, all stored bits are set to zero.</string>
 
+    <string name="elem_Monoflop">Monoflop</string>
+    <string name="elem_Monoflop_short">Mono</string>
+    <string name="elem_Monoflop_tt">The monoflop is set at a rising edge at the clock input.
+        After a configurable delay time, the monoflop will be cleared automatically.
+        The monoflop is retriggerable. It can only be used if there is exactly one clock element in the circuit.
+    </string>
+    <string name="elem_Monoflop_pin_R">Reset Input. A high value clears the monoflop.</string>
+    <string name="elem_Monoflop_pin_C">The Clock input. A rising edge sets the monoflop.</string>
+    <string name="elem_Monoflop_pin_Q">output</string>
+    <string name="elem_Monoflop_pin_~Q">inverted output</string>
 
     <!-- Memory -->
 
@@ -819,6 +829,7 @@ The names of the variables may not be unique.</string>
     <string name="err_circuitHasCycles">The circuit contains cycles. It's not possible to analyze such a circuit.
         Cycles arise if an output of a gate is fed back to one of the inputs of the same gate.
         The use of switches, FETs or relays also causes cycles.</string>
+    <string name="err_monoflopRequiresOneClock">If a monoflop is used, there must be exactly one clock component!</string>
 
     <string name="key_AddrBits">Address Bits</string><!-- ROM, RAMDualPort, RAMSinglePort, RAMSinglePortSel, EEPROM -->
     <string name="key_AddrBits_tt">Number of address bits used.</string>
@@ -1007,6 +1018,8 @@ The names of the variables may not be unique.</string>
     <string name="key_delayTime_tt">Delay time in units of the common gate propagation delay.</string>
     <string name="key_invertOutput">inverted output</string>
     <string name="key_invertOutput_tt">If selected the output is inverted.</string>
+    <string name="key_timerDelay">Pulse Width</string>
+    <string name="key_timerDelay_tt">The puls width is measured in clock cycles.</string>
 
 
     <string name="mod_insertWire">Inserted wire.</string>
