@@ -40,8 +40,8 @@ public class TestExamples extends TestCase {
      */
     public void testTestExamples() throws Exception {
         File examples = new File(Resources.getRoot(), "/dig/test");
-        assertEquals(122, new FileScanner(this::check).scan(examples));
-        assertEquals(111, testCasesInFiles);
+        assertEquals(123, new FileScanner(this::check).scan(examples));
+        assertEquals(112, testCasesInFiles);
     }
 
 
